--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>my moving car</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -24,6 +22,6 @@
               
           </div>
     </div>
-    
+    <script rel='javascript' src='index.js'  type='text/javascript></script>
 </body>
 </html>   
